1.10.4
------

1.10.3
------
(RB=239728)
Add javadoc to SchemaSampleDataGenerator.
Implement sample data callback for SchemaSampleDataGenerator.

(RB=242286)
Generate error that was not previously detected when trying to set incompatible overriding default value in
outer type (e.g. record) that overrides default of an inner type (e.g. string field within record.)

(RB=242652)
Add support for schema JSON strings greater max Java string literal length.

(RB=235794)
Add propagation of deprecated keys used on types and fields in pdscs to generated java data templates.

1.10.2
------
(RB=241241)
fix a problem where threads will get locked if there is an uncaught exception being thrown during updateState in LoadBalancerStrategy

1.10.1
------
(RB=241529)
Remove logging from data.

1.10.0
------
(RB=231736)
Upgrade Jackson to 2.2.2.

1.9.49
------
(RB=239631)
Fixed log error message in ClientServiceConfigValidator.

1.9.48
------
(RB=239561)
Fix bug in ClientServiceConfigValidator. We were previously casting the values directly to an int. However, this is incorrect as the values in the map are Strings.

1.9.47
------
(RB=237507)
Fix of getClient for scatter/gather and search

(RB=234511)
Replacing IdentityHashMap in RecordTemplate, WrappingMapTemplate and WrappingArrayTemplate with a custom cache implementation.

1.9.46
------
<<<<<<< HEAD
(RB=233744)
Disable data object checking on safe and performance-critical situations.

(RB=235277)
Added compatibility checking to annotations. Annotation changes will now be considered compatible rather than
simply skipped over and thus considered equivalent.

(RB=235831)
Add functionality of listening to all children's data under a certain znode in ZooKeeper.

1.9.45
------
(RB=233764)
Add permissive option to degrade on serializing bad user data

1.9.44
------
(RB=232974)
Adding perf test for Record Template put performance.

(RB=231054)